--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -31,6 +31,11 @@ server {
       try_files $uri $uri/ /index.php?$query_string;
   }
 
+  location /storage/ {
+    root /var/www/html/public;
+    try_files $uri $uri/ =404;
+}
+
   location = /favicon.ico { access_log off; log_not_found off; }
   location = /robots.txt  { access_log off; log_not_found off; }
 
